<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <LinearLayout
        android:id="@+id/waste_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/object_photo"
            android:layout_marginTop="4dp"
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:src="@drawable/contoh_waste"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/waste_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="Botol Plastik"/>

            <TextView
                android:id="@+id/waste_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="11sp"
                android:textColor="@color/black"
                android:text="@string/PET"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/cara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/waste_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/cara" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_waste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cara" />

    <Button
        android:id="@+id/backHomeBtn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:text="@string/backhome"
        android:textSize="14sp"
        android:textStyle="bold"
        android:background="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>